更改了日志功能，使日志更加的简洁
Signed-off-by: teacherZhang <1476203673@qq.com>

--- a/course-management/src/main/resources/application.yml
+++ b/course-management/src/main/resources/application.yml
@@ -12,9 +12,7 @@ logging:
   level:
     com.hbut: debug
   file:
-    path: ./logs
-  pattern:
-    file = %d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
+    path: D:/code/logs/
 mybatis-plus:
   global-config:
     db-config:
