增加了文件上传功能，修改了跨域问题，使所有的网页都可以访问此后端

--- a/course-management/pom.xml
+++ b/course-management/pom.xml
@@ -86,7 +86,13 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.9</version>
         </dependency>
-
+        
+        <!--文件上传-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
