--- a/course-management/src/main/resources/application.yml
+++ b/course-management/src/main/resources/application.yml
@@ -7,7 +7,15 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/coursemanagement?serverTimezone=UTC
   redis:
     port: 6379
-
+  servlet: #文件
+    multipart:
+      enabled: true
+      max-file-size: 20MB
+      max-request-size: 20MB
+file:
+  upload:
+    dir: D:/test
+    disableTypes: dll,exe
 logging:
   level:
     com.hbut: debug
