修改了page的用法,文件页面测试
Signed-off-by: teacher <1476203673@qq.com>

--- a/course-management/pom.xml
+++ b/course-management/pom.xml
@@ -93,6 +93,13 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.4</version>
         </dependency>
+
+        <!--邮件发送依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
